Fix z-index issue with button on action=history page
When opening/closing the main navigation, the large blue button
on the action=history page is visible above the opaque page content.

This changes the z-index when the main navigation is enabled.

Bug: T219895

--- a/skinStyles/mediawiki.action.history.styles.less
+++ b/skinStyles/mediawiki.action.history.styles.less
@@ -128,7 +128,7 @@
 		position: -webkit-sticky;
 		top: 0;
 		background: @skinContentBgColor;
-		z-index: @z-indexOverlay;
+		z-index: @z-indexAboveContent;
 
 		// "Compare selected revisions" button
 		.mw-history-compareselectedversions-button {
